// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly locked 1`] = `
<Die
  locked={true}
>
  <button
    className="Die Die-locked"
    onClick={[Function]}
  />
</Die>
`;

exports[`renders correctly unlocked 1`] = `
<Die
  locked={false}
>
  <button
    className="Die"
    onClick={[Function]}
  />
</Die>
`;
